engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: blob
---
■ '/resume' is disabled while a task is in progress.
